WebCore:

2009-07-22  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Eric Seidel.

        execCommand('underline') can't remove <U> underlines
        https://bugs.webkit.org/show_bug.cgi?id=20215

        This patch adds support for u, s, and strike to implicitlyStyledElementShouldBeRemovedWhenApplyingStyle so that
        WebKit can remove those presentational tags when necessary.
        It also modifies StyleChange::init not to add "text-decoration: none".  Not only is this style meaningless
        (does not override inherited styles) but it was also causing WebKit to generate extra spans with this style.

        * css/CSSValueList.cpp:
        (WebCore::CSSValueList::hasValue): True if the property contains the specified value
        * css/CSSValueList.h: Updated prototype
        * editing/ApplyStyleCommand.cpp:
        (WebCore::StyleChange::init): No longer adds "text-decoration: none"
        (WebCore::ApplyStyleCommand::implicitlyStyledElementShouldBeRemovedWhenApplyingStyle): Supports text-decoration-related elements

LayoutTests:

2009-07-22  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Eric Seidel.

        execCommand('underline') can't remove <U> underlines
        https://bugs.webkit.org/show_bug.cgi?id=20215

        This patch rebaselines toggle-styles.html because WebKit now passes three tests it used to fail.
        toggle-style-2.html is added to test cases in which multiple styles are specified with tags.
        We still fail some tests because WebKit doesn't properly support non-CSS mode but they are visually correct.

        * editing/execCommand/resources/toggle-style-2.js: Added.
        (testSingleToggle):
        (testDoubleToggle):
        * editing/execCommand/toggle-style-2-expected.txt: Added.
        * editing/execCommand/toggle-style-2.html: Added.
        * editing/execCommand/toggle-styles-expected.txt: Passes all the tests



Canonical link: https://commits.webkit.org/37899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46286 268f45cc-cd09-0410-ab3c-d52691b4dbfc